finished logger. updated logs. added new state.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ set(SRC_STATES
 
     src/states/init/initstate.cpp
 
+    src/states/combat/combatstate.cpp
+
     src/states/load/loadstate.cpp
 )
 
