--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SRC_STATES
     # src/states/init/initstate.cpp
     # src/states/load/loadstate.cpp
     src/states/combat/combatstate.cpp
+    src/states/combat/combatstate_playermovement.cpp
 )
 
 set(SRC_ENGINE
